# MapCoDoc

./: .env.example  .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.lock.txt  requirements.txt  setup.py
cli/: __init__.py  main.py
code_analysis/: README.md  __init__.py  api_resolver.py  code_components.py  code_visitor.py  config.py  decorator_analysis.py  definition_registry.py  documentation_linker.py  dynamic_analyzer.py  events.py  exclusions.json  feature_flags.py  inheritance_resolver.py  mapcodocreg.py  parameter_analysis.py  project_metadata.py  relationship_types.py  repo_manager.py  utils.py  watcher.py
doc_processor/: README.md  doc_runner.py  filter_doc.py  process_crossRef.py  structured_doc_extracter.py
doc_quality/: README.md  __init__.py  __main__.py  class_member_lister.py  code_truth_resolver.py  config.py  doc_views.py  issue_types.py  models.py  presence.py  requirements.txt  type_normalizer.py
docs/: api_reference.md  events.md  features.md  methodology.md  workflow.md
mapcodoc_db/: README.md  __init__.py  db_manager.py  db_models.py  query.py
survey results/: MapCoDoc Fine-Grained Trace Link Recovery Between Source Code and API Reference Documentation.xlsx
tests/: collect_member_docs.py  extract_sample_urls.py  isolate_python_members.py  pandas_fidelity_pdf.csv  pandas_fidelity_web.csv  requests_fidelity_pdf.csv  sklearn_fidelity_web.csv  sqlalchemy_fidelity_pdf.csv  test_call_graph.py  test_call_graph_analysis.py  test_classify_python_member.py  test_code_visitor_calls.py  test_extraction.py  (+14 more)
(+364 files in other folders)
